# BioDockLab

./: .gitattributes  .gitignore  Dockerfile  LICENSE  NOTICE.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
ai/: experiment_analyzer.py  experiment_feature_engineering.py  risk_classifier.py
backend/: README.md  main.py
bio/: bioinformatics_toolkit.py  experiment_record.py  sequence_parser.py
database/: schema.sql  seed.sql
docs/: BioDockLab_v2_Development_Note.md  CHANGELOG.md  GITHUB_MANAGEMENT.md  MEETING_NOTE_TEMPLATE.md  MVP_SPEC.md  README.md  ROLE_ASSIGNMENT.md
experiments/: EXPERIMENT_LOG_TEMPLATE.md  experiment_runs.json
frontend/: BioDashboard.tsx  README.md  bio_ai_live_dashboard.html  bio_ai_navigator.html  bio_ai_types.ts  clinical_app.js  clinical_v2.html  clinical_v2_app.js  clinical_v3.html  index.html
imaging/: medical_image_note.md  medical_image_pipeline.py
quantum/: quantum_bio_note.md  quantum_bio_pipeline.py
reports/: BioDockLab_Report_Node.md  generate_report.py  pdf_exporter.py  report_builder.py
sample_data/: access_policies.json  audit_logs.json  clinical_seed.json  clinical_timeline.json  clinical_users.json  digital_twin_findings.json  docking_results.json  doctor_decisions.json  hospital_audit_events.json  patient_reports.json  protein_annotations.json  proteins.json  risk_events.json  sample_docking_result.json  sample_docking_results.json  vital_signs.json
scripts/: README.md  biodocklab_node_server.js  build_final_review_pdf.py  build_review_screen_pdf.py  check_docs.py  (+4 more)
(+122 files in other folders)
